# esp32tv-bitaxe-dashboard

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.claude/agents/: update-readme.md
main/: CMakeLists.txt  Kconfig.projbuild  app_backlight.c  app_backlight.h  app_config.c  app_config.h  app_display.c  app_display.h  app_main.c  app_portal.c  app_portal.h  app_touch.c  app_touch.h  app_wifi.c  app_wifi.h  bitaxe_api.c  bitaxe_api.h  board_config.h  idf_component.yml  ui_dashboard.c  ui_dashboard.h
main/fonts/: font_space_grotesk_14.c  font_space_grotesk_20.c  font_space_grotesk_28.c
main/logos/: bch_24.c  btc_24.c  btg_24.c
